<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12dp"
    app:cardCornerRadius="@dimen/_12dp"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/dialog_incident_report_title"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/_18sp"
                app:fontFamily="@font/inter_18pt_semi_bold"
                tools:ignore="RelativeOverlap" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCloseDialog"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_xclose_24" />
        </RelativeLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/dialog_incident_report_subtitle"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/_14sp"
            app:fontFamily="@font/inter_18pt_regular" />
        <!-- Shipping receipt-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_18pt_medium"
                android:text="@string/dialog_incident_report_description_title"
                android:textColor="@color/gray_500"
                android:textSize="@dimen/_14sp" />
            <androidx.appcompat.widget.AppCompatEditText
                android:layout_marginVertical="@dimen/_6dp"
                android:background="@drawable/bg_edittext_rounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14sp"
                android:textColor="@color/gray_700"
                android:lines="5"
                android:maxLength="100"
                android:id="@+id/edtIncidentReport"
                android:padding="@dimen/_12dp"
                android:gravity="top"
                android:hint="@string/dialog_incident_report_description_hint"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_18pt_medium"
                android:text="@string/dialog_incident_report_photo_title"
                android:textColor="@color/gray_500"
                android:textSize="@dimen/_14sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12dp"
                android:orientation="horizontal">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSelectIncidentImages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_8dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="true"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:itemCount="6"
                    app:spanCount="3"
                    tools:listitem="@layout/view_holder_upload_item"
                    android:layout_marginBottom="@dimen/_24dp"/>
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44dp"
            android:layout_marginTop="@dimen/_24dp"
            android:background="@drawable/bg_primary_500_rounded_30"
            android:fontFamily="@font/inter_18pt_semi_bold"
            android:text="@string/common_submit"
            android:textAllCaps="false"
            android:textColor="@color/base_white"
            android:textSize="@dimen/_16sp"
            app:backgroundTint="@null" />


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>