<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12dp"
    app:cardCornerRadius="@dimen/_12dp"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_23dp"
        android:paddingVertical="@dimen/_44dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_88dp"
            android:layout_height="@dimen/_88dp"
            app:srcCompat="@drawable/ic_check_success"/>

        <com.google.android.material.textview.MaterialTextView
            android:gravity="center"
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/dialog_indicdent_report_success_title"
            android:textColor="@color/gray_900"
            android:textSize="@dimen/_18sp"
            app:fontFamily="@font/urbanist_semi_bold" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDialogSubTitle"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_18pt_regular"
            android:text="@string/dialog_indicdent_report_success_subtitle"
            android:textColor="@color/gray_800"
            android:textSize="@dimen/_14sp" />


        <com.google.android.material.button.MaterialButton

            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44dp"
            android:layout_marginTop="@dimen/_24dp"
            android:background="@drawable/bg_primary_500_rounded_30"
            android:fontFamily="@font/inter_18pt_medium"
            android:text="@string/common_ok"
            android:textAllCaps="true"
            android:textColor="@color/base_white"
            android:textSize="@dimen/_16sp"
            app:backgroundTint="@null" />


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>