<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_12dp"
    app:cardCornerRadius="@dimen/_8dp"
    style="@style/CardViewStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_23dp"
        android:paddingVertical="@dimen/_12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center"
            android:background="@drawable/bg_error_100_radius_30"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:padding="@dimen/_12dp"
            app:srcCompat="@drawable/ic_setting_logout"/>

        <com.google.android.material.textview.MaterialTextView
            android:gravity="center"
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/dialog_confirm_logout_title"
            android:textColor="@color/gray_700"
            android:textSize="@dimen/_16sp"
            app:fontFamily="@font/inter_18pt_medium" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDialogSubTitle"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_18pt_regular"
            android:text="@string/dialog_indicdent_report_success_subtitle"
            android:textColor="@color/gray_700"
            android:textSize="@dimen/_14sp" />

        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_8dp"
            android:gravity="bottom"
            android:layout_height="@dimen/_50dp">
            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38dp"
                android:background="@drawable/bg_gray_300_rounded_30"
                android:fontFamily="@font/inter_18pt_medium"
                android:text="@string/common_cancel"
                android:textAllCaps="false"
                android:textColor="@color/gray_700"
                android:textSize="@dimen/_14sp"
                android:layout_marginEnd="@dimen/_10dp"
                app:backgroundTint="@null" />
            <com.google.android.material.button.MaterialButton
                android:layout_marginStart="@dimen/_10dp"
                android:layout_weight="1"
                android:id="@+id/btnLogout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38dp"
                android:background="@drawable/bg_error_500_rounded_30"
                android:fontFamily="@font/inter_18pt_medium"
                android:text="@string/dialog_confirm_logout_button"
                android:textAllCaps="false"
                android:textColor="@color/base_white"
                android:textSize="@dimen/_14sp"
                app:backgroundTint="@null" />
        </LinearLayout>




    </LinearLayout>
</com.google.android.material.card.MaterialCardView>