<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_main_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_marginTop="@dimen/_60dp"
            android:id="@+id/constraintTopContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_logo" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_22dp"
                    android:layout_marginTop="@dimen/_24dp"
                    android:text="@string/login_label_welcome"
                    android:textColor="@color/primary_800"
                    android:textSize="@dimen/_30sp"
                    app:fontFamily="@font/urbanist_bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCaption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_22dp"
                    android:layout_marginTop="@dimen/_24dp"
                    android:layout_marginBottom="@dimen/_12dp"
                    android:text="@string/login_label_login_instructions"
                    android:textColor="@color/primary_800"
                    android:textSize="@dimen/_14sp"
                    app:fontFamily="@font/inter_24pt_regular" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24dp"
                android:layout_marginEnd="@dimen/_24dp">

                <!--Phone-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintPhone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:background="@drawable/bg_edittext_rounded"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSelectCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_8dp"
                        android:paddingEnd="@dimen/_8dp"
                        android:textColor="@color/gray_800"
                        android:textSize="@dimen/_14sp"
                        app:drawableEndCompat="@drawable/ic_arrow_down"
                        app:fontFamily="@font/inter_18pt_regular"
                        app:layout_constraintBottom_toBottomOf="@+id/tilEdtPhone"
                        app:layout_constraintStart_toEndOf="@+id/tilEdtPhone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tilEdtPhone"
                        tools:text="+84" />

                    <com.google.android.material.textfield.TextInputLayout
                        app:hintEnabled="false"
                        style="@style/Widget.App.TextInputLayout"
                        android:id="@+id/tilEdtPhone"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_44dp"
                        app:boxBackgroundMode="none"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvSelectCountry"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/login_hint_phone"
                            android:inputType="number"
                            android:padding="@dimen/_12dp"
                            android:textColor="@color/gray_800"
                            android:textSize="@dimen/_16sp"
                            app:fontFamily="@font/inter_24pt_regular"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--Code-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:background="@drawable/bg_edittext_rounded"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintPhone">

                    <com.google.android.material.textfield.TextInputLayout
                        app:hintEnabled="false"
                        style="@style/Widget.App.TextInputLayout"
                        android:id="@+id/tilEdtCode"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_44dp"
                        app:boxBackgroundMode="none"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvGetCode"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/codeEditText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:hint="@string/login_hint_code"
                            android:inputType="number"
                            android:padding="@dimen/_12dp"
                            android:textColor="@color/gray_800"
                            android:textSize="@dimen/_16sp"
                            app:fontFamily="@font/inter_24pt_regular"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:enabled="true"
                        android:id="@+id/tvGetCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_8dp"
                        android:paddingEnd="@dimen/_14dp"
                        android:text="@string/register_get_code_link"
                        android:textColor="@color/primary_500"
                        android:textSize="@dimen/_14sp"
                        app:fontFamily="@font/inter_18pt_medium"
                        app:layout_constraintBottom_toBottomOf="@+id/tilEdtCode"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tilEdtCode"
                        app:layout_constraintTop_toTopOf="@+id/tilEdtCode" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <!--Terms and policy-->
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/termsCheckBox"
                    style="@style/Widget.App.MaterialCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="top"
                    android:text="@string/login_label_terms_link"
                    android:textSize="@dimen/_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintCode" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_44dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/bg_primary_500_rounded_30"
                    android:text="@string/login_button"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/termsCheckBox" />

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/signInText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2dp"
                        android:text="@string/login_label_have_account"
                        android:textColor="@color/gray_700"
                        android:textSize="@dimen/_14sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_marginStart="@dimen/_2dp"
                        android:id="@+id/tvSignUpLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_sign_up_link"
                        android:textColor="@color/primary_600"
                        app:fontFamily="@font/inter_18pt_medium"
                        android:textSize="@dimen/_14sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_vehicle_container" />
    <androidx.core.widget.ContentLoadingProgressBar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/primary_500"
        android:id="@+id/loadingProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
